<resources>
    <string name="app_name">Финансовый Компас</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="title_activity_quiz_statistics">QuizStatisticsActivity</string>
    <string name="quiz_finish_message">Спасибо за игру! Даже если в каких-то вопросах ты ошибся - это нормально, так бывает, когда осваиваешь новое. Мы очень рады, что ты прошел тест до конца и закрепил материал. Можешь не удалять игру, а вернуться к ней в любой момент, освежить знания или просто проверить себя</string>
    <string name="quiz_button">Тест на знание финансовой грамотности</string>
    <string name="real_life_button">Симулятор финансовых решений</string>
    <string name="step_to_future_button">Шаг в Будущее</string>
    <string name="quiz_success_rate">Успешность: %d%%</string>
    <string name="Info">Info</string>
    <string name="_1">День: 1</string>
    <string name="_35_000">Баланс: 35 000 ₽</string>
    <string name="event">Событие</string>
    <string name="NextAction">Следующая трата</string>
    <string name="title_activity_real_life">RealLife</string>
    <string name="rightOrError">Правда или ошибка</string>


</resources>